# DiplomDF2

./: .env-sample  .flake8  18_09_all.json  Dockerfile  PLAN.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  resp.json  users_data.json
config/: settings.py  urls.py
data/: restaurant_data.json  users.json
restaurant/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
restaurant/fixtures/: test_data.json
restaurant/migrations/: 0001_initial.py  0002_booking_places.py  0003_booking_notification.py  0004_alter_table_number.py  0005_alter_booking_user.py  0006_bookingtoken.py  0007_contentlink_contentparameters.py  0008_alter_contentlink_options_and_more.py  0009_questions_review.py  0010_alter_booking_table_alter_bookingtoken_booking_and_more.py  0011_alter_booking_notification.py
restaurant/templates/restaurant/: about_us.html  base.html  booking.html  booking_confirm_delete.html  booking_confirmed.html  booking_detail.html  booking_form.html  booking_list.html  client_confirm_delete.html  confirm_booking.html  home.html  questions_confirm_delete.html  questions_form.html  questions_list.html  questions_success.html  (+3 more)
restaurant/templatetags/: my_tags.py
restaurant/tests/: test_forms.py  test_models.py  test_my_tags.py  test_utils.py  test_views.py
restaurant/utils/: utils.py
users/: forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id_user_tg_nick_user_time_offset.py  0003_alter_user_options_alter_usertoken_user.py
users/tests/: test_forms.py  test_models.py  test_views.py
(+15 files in other folders)
